cmake_minimum_required(VERSION 3.0)

project(HipopExample)

find_package(OpenMP REQUIRED)
find_package(Hipop REQUIRED)

include_directories("../include")
link_directories("/Users/manon/Documents/mnms/HiPOP/cpp/build/src")

set( SRCS ParallelKShortestPath.cpp)

add_executable(HipopExample ${SRCS})

set_property(TARGET HipopExample PROPERTY CXX_STANDARD 17)

target_link_libraries(HipopExample hipoplib)


